2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2eval.c :
   hisim2, remove unused labels (swallow warnings)

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/Makefile.am ,
 * src/spicelib/devices/hisim2/.cvsignore :
   hisim2, new files Makefile.am and .cvsignore

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/* :
   hisim2, populate this new directory
     with files from HiSIM_2.5.1_Release_20110407.zip
   unchanged, from
     HiSIM_2.5.1_Release_20110407/HiSIM_2.5.1_C-Code/hisim2/

2011-05-21  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvset.c :
   extend HSMHVunsetup() to process some more CKTmkVolt() generated nodes
   FIXME, there are still some more to fix

2011-05-21  Holger Vogt
 * windisp.c, winprint.c, windisp.h, winprint.h, display.c xdisplay.c,
   winmain.c: reduce compiler warnings

2011-05-20  Robert Larice
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml:
    revert ngspiceMakfile.am.xml

2011-05-19  Dietmar Warning
 * spicelib/devices/bsim3v32/b3v32temp.c: move the mulu0 entry outside
   the size dependent section, like delvto

2011-05-19  Robert Larice
 * autogen.sh :
    update --adms3

2011-05-19  Robert Larice
 * autogen.sh :
    add --adms3 to autogen.sh

2011-05-19  Robert Larice
 * src/spicelib/parser/inpptree-parser.c,
 * src/spicelib/parser/inpptree-parser.h,
 * src/frontend/parse-bison.c,
 * src/frontend/parse-bison.h:
    undo the accidental commit of intemediate files

2011-05-19  Laurent Lemaitre
    remove usage of ngspiceVersion.xml in autogen.sh

2011-05-19  Laurent Lemaitre
    all xml files are concatenated into one single file ngspice.xml - except ngspiceMakefile.am.xml

2011-05-15  Holger Vogt
 * inp2z.c: remove checking for thismodel->INPmodType
   because this might lead to segfault if the user supplies
   a wrong ZXXXXX input

2011-05-08  Robert Larice
 * src/frontend/shyu.c ,
 * src/frontend/spiceif.c ,
 * src/spicelib/analysis/cktdest.c ,
 * src/spicelib/analysis/cktdltm.c ,