@@ -14,7 +14,7 @@
 ***********************************************************************/
 
 #include <stdio.h>
-#include "spice.h"
+#include "ngspice.h"
 #include "util.h"
 #include "cktdefs.h"
 #include "hsm2def.h"
