@@ -1,4 +1,8 @@
 2011-05-22  Robert Larice
+ * src/spicelib/devices/hisim2/* :
+   hisim2, #include "spice.h"  -->  "ngspice.h"
+
+2011-05-22  Robert Larice
  * src/spicelib/devices/hisim2/hsm2eval.c :
    hisim2, remove unused labels (swallow warnings)
 
